--- a/widget/html/physical/physicalFrame.html
+++ b/widget/html/physical/physicalFrame.html
@@ -155,34 +155,64 @@ function savePhysical() {
         appKey: historyConstants.appKey,
         host: historyConstants.host
     });
-    model.updateById({
-        class: historyConstants.table.physical,
-        id: id,
-        value: {
-            source_id: api.pageParam.source_id,
-            vod: $api.byId('vod').value,
-            vos: $api.byId('vos').value,
-            corrected_vod: $api.byId('corrected_vod').value,
-            corrected_vos: $api.byId('corrected_vos').value,
-            tod: $api.byId('tod').value,
-            tos: $api.byId('tos').value,
-            outer_eye: $api.byId('outer_eye').value,
-            conjunctiva: $api.byId('conjunctiva').value,
-            cornea: $api.byId('cornea').value,
-            anterior_chamber: $api.byId('anterior_chamber').value,
-            lens: $api.byId('lens').value,
-            vitreous: $api.byId('vitreous').value,
-            eyeground: $api.byId('eyeground').value,
-        }
-    }, function(ret, err) {
-        if (ret) {
-            setStorage("physical", ret);
-            physicalSaveEvent(ret.id);
-            api.closeWin();
-        } else {
-            alert(JSON.stringify(ret));
-        }
-    });
+    if (id != "" && id != undefined) {
+        model.updateById({
+            class: historyConstants.table.physical,
+            id: id,
+            value: {
+                source_id: api.pageParam.source_id,
+                vod: $api.byId('vod').value,
+                vos: $api.byId('vos').value,
+                corrected_vod: $api.byId('corrected_vod').value,
+                corrected_vos: $api.byId('corrected_vos').value,
+                tod: $api.byId('tod').value,
+                tos: $api.byId('tos').value,
+                outer_eye: $api.byId('outer_eye').value,
+                conjunctiva: $api.byId('conjunctiva').value,
+                cornea: $api.byId('cornea').value,
+                anterior_chamber: $api.byId('anterior_chamber').value,
+                lens: $api.byId('lens').value,
+                vitreous: $api.byId('vitreous').value,
+                eyeground: $api.byId('eyeground').value,
+            }
+        }, function(ret, err) {
+            if (ret) {
+                setStorage("physical", ret);
+                physicalSaveEvent(ret.id);
+                api.closeWin();
+            } else {
+                alert(JSON.stringify(ret));
+            }
+        });
+    } else {
+        model.insert({
+            class: historyConstants.table.physical,
+            value: {
+                source_id: api.pageParam.source_id,
+                vod: $api.byId('vod').value,
+                vos: $api.byId('vos').value,
+                corrected_vod: $api.byId('corrected_vod').value,
+                corrected_vos: $api.byId('corrected_vos').value,
+                tod: $api.byId('tod').value,
+                tos: $api.byId('tos').value,
+                outer_eye: $api.byId('outer_eye').value,
+                conjunctiva: $api.byId('conjunctiva').value,
+                cornea: $api.byId('cornea').value,
+                anterior_chamber: $api.byId('anterior_chamber').value,
+                lens: $api.byId('lens').value,
+                vitreous: $api.byId('vitreous').value,
+                eyeground: $api.byId('eyeground').value,
+            }
+        }, function(ret, err) {
+            if (ret) {
+                setStorage("physical", ret);
+                physicalSaveEvent(ret.id);
+                api.closeWin();
+            } else {
+                alert(JSON.stringify(ret));
+            }
+        });
+    }
 }
 
 function selectVision(id) {
@@ -190,7 +220,15 @@ function selectVision(id) {
         title: '请选择',
         cancelTitle: '取消',
         // destructiveTitle: '红色警告按钮',
-        buttons: historyConstants.vision
+        buttons: historyConstants.vision,
+        style: {
+            layerColor: 'rgba(0,0,0,0.4)', //遮蔽层颜色，仅支持 rgba颜色，默认值：rgba（0, 0, 0, 0.4）
+            itemNormalColor: '#F1F1F1', //选项按钮正常状态背景颜色，支持#000、#000000、rgb、rgba，默认值：#F1F1F1
+            itemPressColor: '#688CD4', //选项按钮按下时背景颜色，支持#000、#000000、rgb、rgba，默认值：#E6E6E6
+            fontNormalColor: '#007AFF', //选项按钮正常状态文字颜色，支持#000、#000000、rgb、rgba，默认值：#007AFF
+            fontPressColor: '#FFF', //选项按钮按下时文字颜色，支持#000、#000000、rgb、rgba，默认值：#0060F0
+            titleFontColor: '#8F8F8F' //标题文字颜色，支持#000、#000000、rgb、rgba，默认值：#8F8F8F
+        }
     }, function(ret, err) {
         if (ret) {
             if (ret.buttonIndex != historyConstants.vision.length + 1) {
