优化列表显示内容，ios支持换行；优化编辑状态栏位显示效果

--- a/widget/html/accessoryexam/accessoryExamFrame.html
+++ b/widget/html/accessoryexam/accessoryExamFrame.html
@@ -28,35 +28,35 @@
         <div id="main" class="flex-con">
             <div class="groupName">干眼</div>
             <div class="group group-edit">
-                <div class="field">
+                <div class="field field-edit">
                     <div class="key">BUT. R</div>
                     <div class="value_with_unit">
                         <input type="text" id="but_r" />
                     </div>
                     <div class="unit">s</div>
                 </div>
-                <div class="field">
+                <div class="field field-edit">
                     <div class="key">BUT. L</div>
                     <div class="value_with_unit">
                         <input type="text" id="but_l" />
                     </div>
                     <div class="unit">s</div>
                 </div>
-                <div class="field">
+                <div class="field field-edit">
                     <div class="key">SIT. R</div>
                     <div class="value_with_unit_4">
                         <input type="text" id="sit_r" />
                     </div>
                     <div class="unit">mm&#47;5min</div>
                 </div>
-                <div class="field">
+                <div class="field field-edit">
                     <div class="key">SIT. L</div>
                     <div class="value_with_unit_4">
                         <input type="text" id="sit_l" />
                     </div>
                     <div class="unit">mm&#47;5min</div>
                 </div>
-                <div class="field textarea_field bottom">
+                <div class="field field-edit textarea_field bottom">
                     <div class="field_img">
                         <div class="textarea_key_with_img">前节照相</div>
                         <div class="img_button" id="qjzx_btn" onclick="addImg(this.id)"><img src="../../image/insertImg.png" /></div>
@@ -69,7 +69,7 @@
             </div>
             <div class="groupName">白内障屈光</div>
             <div class="group group-edit">
-                <div class="field textarea_field">
+                <div class="field field-edit textarea_field">
                     <div class="field_img">
                         <div class="textarea_key_with_img">角膜曲率</div>
                         <div class="img_button" id="corneal_curvature_btn" onclick="addImg(this.id)"><img src="../../image/insertImg.png" /></div>
@@ -79,7 +79,7 @@
                     </div>
                     <div class="accessory_img" id="corneal_curvature_img"></div>
                 </div>
-                <div class="field textarea_field">
+                <div class="field field-edit textarea_field">
                     <div class="field_img">
                         <div class="textarea_key_with_img">角膜地形图</div>
                         <div class="img_button" id="corneal_topography_btn" onclick="addImg(this.id)"><img src="../../image/insertImg.png" /></div>
@@ -89,7 +89,7 @@
                     </div>
                     <div class="accessory_img" id="corneal_topography_img"></div>
                 </div>
-                <div class="field textarea_field bottom">
+                <div class="field field-edit textarea_field bottom">
                     <div class="field_img">
                         <div class="textarea_key_with_img">IOL Master</div>
                         <div class="img_button" id="iol_master_btn" onclick="addImg(this.id)"><img src="../../image/insertImg.png" /></div>
@@ -102,7 +102,7 @@
             </div>
             <div class="groupName">青光眼</div>
             <div class="group group-edit">
-                <div class="field textarea_field">
+                <div class="field field-edit textarea_field">
                     <div class="field_img">
                         <div class="textarea_key_with_img">UBM</div>
                         <div class="img_button" id="ubm_btn" onclick="addImg(this.id)"><img src="../../image/insertImg.png" /></div>
@@ -112,7 +112,7 @@
                     </div>
                     <div class="accessory_img" id="ubm_img"></div>
                 </div>
-                <div class="field textarea_field">
+                <div class="field field-edit textarea_field">
                     <div class="field_img">
                         <div class="textarea_key_with_img">视野</div>
                         <div class="img_button" id="view_horizon_btn" onclick="addImg(this.id)"><img src="../../image/insertImg.png" /></div>
@@ -122,7 +122,7 @@
                     </div>
                     <div class="accessory_img" id="view_horizon_img"></div>
                 </div>
-                <div class="field textarea_field">
+                <div class="field field-edit textarea_field">
                     <div class="field_img">
                         <div class="textarea_key_with_img">RFNL</div>
                         <div class="img_button" id="glaucoma_rnfl_btn" onclick="addImg(this.id)"><img src="../../image/insertImg.png" /></div>
@@ -132,7 +132,7 @@
                     </div>
                     <div class="accessory_img" id="glaucoma_rnfl_img"></div>
                 </div>
-                <div class="field textarea_field bottom">
+                <div class="field field-edit textarea_field bottom">
                     <div class="field_img">
                         <div class="textarea_key_with_img">MRI</div>
                         <div class="img_button" id="glaucoma_mri_btn" onclick="addImg(this.id)"><img src="../../image/insertImg.png" /></div>
@@ -145,7 +145,7 @@
             </div>
             <div class="groupName">眼底</div>
             <div class="group group-edit">
-                <div class="field textarea_field">
+                <div class="field field-edit textarea_field">
                     <div class="field_img">
                         <div class="textarea_key_with_img">OCT</div>
                         <div class="img_button" id="oct_btn" onclick="addImg(this.id)"><img src="../../image/insertImg.png" /></div>
@@ -155,7 +155,7 @@
                     </div>
                     <div class="accessory_img" id="oct_img"></div>
                 </div>
-                <div class="field textarea_field">
+                <div class="field field-edit textarea_field">
                     <div class="field_img">
                         <div class="textarea_key_with_img">OCTA</div>
                         <div class="img_button" id="octa_btn" onclick="addImg(this.id)"><img src="../../image/insertImg.png" /></div>
@@ -165,7 +165,7 @@
                     </div>
                     <div class="accessory_img" id="octa_img"></div>
                 </div>
-                <div class="field textarea_field">
+                <div class="field field-edit textarea_field">
                     <div class="field_img">
                         <div class="textarea_key_with_img">眼底照相</div>
                         <div class="img_button" id="fundus_oculi_pic_btn" onclick="addImg(this.id)"><img src="../../image/insertImg.png" /></div>
@@ -175,7 +175,7 @@
                     </div>
                     <div class="accessory_img" id="fundus_oculi_pic_img"></div>
                 </div>
-                <div class="field textarea_field">
+                <div class="field field-edit textarea_field">
                     <div class="field_img">
                         <div class="textarea_key_with_img">B超</div>
                         <div class="img_button" id="b_ultrasonic_btn" onclick="addImg(this.id)"><img src="../../image/insertImg.png" /></div>
@@ -185,7 +185,7 @@
                     </div>
                     <div class="accessory_img" id="b_ultrasonic_img"></div>
                 </div>
-                <div class="field textarea_field">
+                <div class="field field-edit textarea_field">
                     <div class="field_img">
                         <div class="textarea_key_with_img">FFA</div>
                         <div class="img_button" id="ffa_btn" onclick="addImg(this.id)"><img src="../../image/insertImg.png" /></div>
@@ -195,7 +195,7 @@
                     </div>
                     <div class="accessory_img" id="ffa_img"></div>
                 </div>
-                <div class="field textarea_field bottom">
+                <div class="field field-edit textarea_field bottom">
                     <div class="field_img">
                         <div class="textarea_key_with_img">ICG</div>
                         <div class="img_button" id="icg_btn" onclick="addImg(this.id)"><img src="../../image/insertImg.png" /></div>
@@ -208,7 +208,7 @@
             </div>
             <div class="groupName">视神经眼科</div>
             <div class="group group-edit">
-                <div class="field textarea_field">
+                <div class="field field-edit textarea_field">
                     <div class="field_img">
                         <div class="textarea_key_with_img">VEP</div>
                         <div class="img_button" id="vep_btn" onclick="addImg(this.id)"><img src="../../image/insertImg.png" /></div>
@@ -218,7 +218,7 @@
                     </div>
                     <div class="accessory_img" id="vep_img"></div>
                 </div>
-                <div class="field textarea_field">
+                <div class="field field-edit textarea_field">
                     <div class="field_img">
                         <div class="textarea_key_with_img">ERG</div>
                         <div class="img_button" id="erg_btn" onclick="addImg(this.id)"><img src="../../image/insertImg.png" /></div>
@@ -228,7 +228,7 @@
                     </div>
                     <div class="accessory_img" id="erg_img"></div>
                 </div>
-                <div class="field textarea_field">
+                <div class="field field-edit textarea_field">
                     <div class="field_img">
                         <div class="textarea_key_with_img">RFNL</div>
                         <div class="img_button" id="no_rnfl_btn" onclick="addImg(this.id)"><img src="../../image/insertImg.png" /></div>
@@ -238,7 +238,7 @@
                     </div>
                     <div class="accessory_img" id="no_rnfl_img"></div>
                 </div>
-                <div class="field textarea_field bottom">
+                <div class="field field-edit textarea_field bottom">
                     <div class="field_img">
                         <div class="textarea_key_with_img">MRI</div>
                         <div class="img_button" id="no_mri_btn" onclick="addImg(this.id)"><img src="../../image/insertImg.png" /></div>
