--- a/widget/html/followup/followupFrame.html
+++ b/widget/html/followup/followupFrame.html
@@ -28,13 +28,13 @@
         <div id="main" class="flex-con">
             <div class="groupName">病情</div>
             <div class="group group-edit">
-                <div class="field textarea_field">
+                <div class="field field-edit textarea_field">
                     <div class="textarea_key">病情</div>
                     <div class="textarea_value">
                         <textarea id="condition" placeholder="请输入病情信息"></textarea>
                     </div>
                 </div>
-                <div class="field textarea_field bottom">
+                <div class="field field-edit textarea_field bottom">
                     <div class="textarea_key">治疗</div>
                     <div class="textarea_value">
                         <textarea id="treatment" placeholder="请输入治疗信息"></textarea>
