--- a/widget/html/physical/physicalFrame.html
+++ b/widget/html/physical/physicalFrame.html
@@ -28,13 +28,13 @@
         <div id="main" class="flex-con">
             <div class="groupName">裸眼视力</div>
             <div class="group group-edit">
-                <div class="field">
+                <div class="field field-edit">
                     <div class="key">Vod</div>
                     <div class="value">
                         <input type="text" id="vod" onclick="selectVision('vod')" />
                     </div>
                 </div>
-                <div class="field bottom">
+                <div class="field field-edit bottom">
                     <div class="key">Vos</div>
                     <div class="value">
                         <input type="text" id="vos" onclick="selectVision('vos')" />
@@ -43,13 +43,13 @@
             </div>
             <div class="groupName">矫正视力</div>
             <div class="group group-edit">
-                <div class="field">
+                <div class="field field-edit">
                     <div class="key">Vod</div>
                     <div class="value">
                         <input type="text" id="corrected_vod" onclick="selectVision('corrected_vod')" />
                     </div>
                 </div>
-                <div class="field bottom">
+                <div class="field field-edit bottom">
                     <div class="key">Vos</div>
                     <div class="value">
                         <input type="text" id="corrected_vos" onclick="selectVision('corrected_vos')" />
@@ -58,14 +58,14 @@
             </div>
             <div class="groupName">眼压</div>
             <div class="group group-edit">
-                <div class="field">
+                <div class="field field-edit">
                     <div class="key">Tod</div>
                     <div class="value_with_unit">
                         <input type="text" id="tod" />
                     </div>
                     <div class="unit">mmHg</div>
                 </div>
-                <div class="field bottom">
+                <div class="field field-edit bottom">
                     <div class="key">Tos</div>
                     <div class="value_with_unit">
                         <input type="text" id="tos" />
@@ -75,43 +75,43 @@
             </div>
             <div class="groupName">其他</div>
             <div class="group group-edit">
-                <div class="field">
+                <div class="field field-edit">
                     <div class="key">外眼</div>
                     <div class="value">
                         <input type="text" id="outer_eye" />
                     </div>
                 </div>
-                <div class="field">
+                <div class="field field-edit">
                     <div class="key">结膜</div>
                     <div class="value">
                         <input type="text" id="conjunctiva" />
                     </div>
                 </div>
-                <div class="field">
+                <div class="field field-edit">
                     <div class="key">角膜</div>
                     <div class="value">
                         <input type="text" id="cornea" />
                     </div>
                 </div>
-                <div class="field">
+                <div class="field field-edit">
                     <div class="key">前房</div>
                     <div class="value">
                         <input type="text" id="anterior_chamber" />
                     </div>
                 </div>
-                <div class="field">
+                <div class="field field-edit">
                     <div class="key">晶体</div>
                     <div class="value">
                         <input type="text" id="lens" />
                     </div>
                 </div>
-                <div class="field">
+                <div class="field field-edit">
                     <div class="key">玻璃体</div>
                     <div class="value">
                         <input type="text" id="vitreous" />
                     </div>
                 </div>
-                <div class="field bottom">
+                <div class="field field-edit bottom">
                     <div class="key">眼底</div>
                     <div class="value">
                         <input type="text" id="eyeground" />
