--- a/widget/html/accessoryexam/accessoryExamFrame.html
+++ b/widget/html/accessoryexam/accessoryExamFrame.html
@@ -44,14 +44,14 @@
                 </div>
                 <div class="field field-edit">
                     <div class="key">SIT. R</div>
-                    <div class="value_with_unit_4">
+                    <div class="value_with_unit">
                         <input type="text" id="sit_r" />
                     </div>
                     <div class="unit">mm&#47;5min</div>
                 </div>
                 <div class="field field-edit">
                     <div class="key">SIT. L</div>
-                    <div class="value_with_unit_4">
+                    <div class="value_with_unit">
                         <input type="text" id="sit_l" />
                     </div>
                     <div class="unit">mm&#47;5min</div>
