--- a/widget/html/history/viewFullHistory.html
+++ b/widget/html/history/viewFullHistory.html
@@ -35,30 +35,35 @@
             <div class="groupName">基本信息</div>
             <div class="group">
                 <div class="field">
+                    <div class="key_icon_div"><img class="key_icon" src="../../image/name.png" /></div>
                     <div class="key">姓名</div>
                     <div class="value">
                         <input type="text" id="name" />
                     </div>
                 </div>
                 <div class="field">
+                    <div class="key_icon_div"><img class="key_icon" src="../../image/gender.png" /></div>
                     <div class="key">性别</div>
                     <div class="value">
                         <input type="text" id="gender" />
                     </div>
                 </div>
                 <div class="field">
+                    <div class="key_icon_div"><img class="key_icon" src="../../image/birthday.png" /></div>
                     <div class="key">出生日期</div>
                     <div class="value">
                         <input type="text" id="birthday" />
                     </div>
                 </div>
                 <div class="field">
+                    <div class="key_icon_div"><img class="key_icon" src="../../image/age.png" /></div>
                     <div class="key">年龄</div>
                     <div class="value">
                         <input type="text" id="age" />
                     </div>
                 </div>
                 <div class="field bottom">
+                    <div class="key_icon_div"><img class="key_icon" src="../../image/job.png" /></div>
                     <div class="key">职业</div>
                     <div class="value">
                         <input type="text" id="job" />
