完成标题前小图标

--- a/widget/html/history/viewFullHistoryFrame.html
+++ b/widget/html/history/viewFullHistoryFrame.html
@@ -42,35 +42,35 @@
             <div class="groupName">基本信息</div>
             <div class="group">
                 <div class="field">
-                    <div class="key_icon_div"><img class="key_icon" src="../../image/name.png" /></div>
+                    <div class="key_icon_div"><img class="key_icon" src="../../image/name_c0.png" /></div>
                     <div class="key">姓名</div>
                     <div class="value">
                         <input type="text" id="name" />
                     </div>
                 </div>
                 <div class="field">
-                    <div class="key_icon_div"><img class="key_icon" src="../../image/gender.png" /></div>
+                    <div class="key_icon_div"><img class="key_icon" src="../../image/gender_c0.png" /></div>
                     <div class="key">性别</div>
                     <div class="value">
                         <input type="text" id="gender" />
                     </div>
                 </div>
                 <div class="field">
-                    <div class="key_icon_div"><img class="key_icon" src="../../image/birthday.png" /></div>
+                    <div class="key_icon_div"><img class="key_icon" src="../../image/birthday_c0.png" /></div>
                     <div class="key">出生日期</div>
                     <div class="value">
                         <input type="text" id="birthday" />
                     </div>
                 </div>
                 <div class="field">
-                    <div class="key_icon_div"><img class="key_icon" src="../../image/age.png" /></div>
+                    <div class="key_icon_div"><img class="key_icon" src="../../image/age_c0.png" /></div>
                     <div class="key">年龄</div>
                     <div class="value">
                         <input type="text" id="age" />
                     </div>
                 </div>
                 <div class="field bottom">
-                    <div class="key_icon_div"><img class="key_icon" src="../../image/job.png" /></div>
+                    <div class="key_icon_div"><img class="key_icon" src="../../image/job_c0.png" /></div>
                     <div class="key">职业</div>
                     <div class="value">
                         <input type="text" id="job" />
@@ -80,12 +80,14 @@
             <div class="groupName">编号</div>
             <div class="group">
                 <div class="field">
+                    <div class="key_icon_div"><img class="key_icon" src="../../image/admission_number_c0.png" /></div>
                     <div class="key">住院号</div>
                     <div class="value">
                         <input type="text" id="admission_number" />
                     </div>
                 </div>
                 <div class="field bottom">
+                    <div class="key_icon_div"><img class="key_icon" src="../../image/outpatient_number_c0.png" /></div>
                     <div class="key">门诊号</div>
                     <div class="value">
                         <input type="text" id="outpatient_number" />
@@ -95,12 +97,14 @@
             <div class="groupName">联系方式</div>
             <div class="group">
                 <div class="field">
+                    <!-- <div class="key_icon_div"><img class="key_icon" src="../../image/phone_c0.png" /></div> -->
                     <div class="key">电话</div>
                     <div class="value">
                         <input type="text" id="phone" />
                     </div>
                 </div>
                 <div class="field textarea_field bottom">
+                    <!-- <div class="key_icon_div"><img class="key_icon" src="../../image/address_c0.png" /></div> -->
                     <div class="textarea_key">地址</div>
                     <div class="textarea_value">
                         <textarea id="address"></textarea>
