--- a/widget/html/history/historyList.html
+++ b/widget/html/history/historyList.html
@@ -156,13 +156,23 @@ var apiready = function() {
 
         // 左划第二个按钮事件，删除病历
         if (ret.eventType == "clickRightBtn" && ret.btnIndex == "1") {
-            if (confirm("确定删除？")) {
-                historyList.getDataByIndex({
-                    index: ret.index
-                }, function(ret, err) {
-                    deleteHistory(ret.data.history_id);
-                });
-            }
+            api.confirm({
+                title: '请选择',
+                msg: '确定删除？',
+                buttons: ['删除', '取消']
+            }, function(ret, err) {
+                if (ret) {
+                    if (ret.buttonIndex == 1) {
+                        historyList.getDataByIndex({
+                            index: ret.index
+                        }, function(ret, err) {
+                            deleteHistory(ret.data.history_id);
+                        });
+                    }
+                } else {
+                    alert(JSON.stringify(err));
+                }
+            });
         }
     });
     historyList.setRefreshHeader({
