修改应用名称

--- a/widget/login.html
+++ b/widget/login.html
@@ -27,7 +27,7 @@
 
     <body>
         <section class="login-form-wrap">
-            <h1>讨厌的病历本</h1>
+            <h1>眼科病历本</h1>
             <form class="login-form">
                 <label>
                     <input type="text" name="email" id="userName" required placeholder="用户名">
